tests/ui/assumptions_on_binders/trait-upcast-projection-region-eq.stderr
error[E0277]: the trait bound `&dyn Sub: CoerceUnsized<&dyn Super<Assoc = for<'a> fn(&'a ())>>` is not satisfied
  --> $DIR/trait-upcast-projection-region-eq.rs:8:57
   |
LL |         let b: &dyn Super<Assoc = for<'a> fn(&'a ())> = a;
   |                                                         ^ the nightly-only, unstable trait `Unsize<dyn Super<Assoc = for<'a> fn(&'a ())>>` is not implemented for `dyn Sub`
   |
   = note: all implementations of `Unsize` are provided automatically by the compiler, see <https://doc.rust-lang.org/stable/std/marker/trait.Unsize.html> for more information
   = note: required for `&dyn Sub` to implement `CoerceUnsized<&dyn Super<Assoc = for<'a> fn(&'a ())>>`
   = note: required for the cast from `&dyn Sub` to `&dyn Super<Assoc = for<'a> fn(&'a ())>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
